[package]
name = "rust_smt"
version = "0.1.0"
authors = ["Clark Barrett <cbarrett@fb.com>"]
edition = "2018"
description = "A generic solver-agnostic API for interacting with SMT solvers based on the SMT-LIB standard."
repository = "https://github.com/facebookincubator/Rust-SMT-LIB-API"
readme = "README.md"
keywords = ["smt", "satisfiability", "modulo", "theories", "z3"]
categories = ["api-bindings", "science"]
license = "MIT"

[badges]
travis-ci = { repository = "facebookincubator/Rust-SMT-LIB-API", branch = "master" }
codecov = { repository = "facebookincubator/Rust-SMT-LIB-API", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1"
z3-sys = "0.4.0"
