[package]
name = "rust_smt"
version = "0.2.0"
authors = ["Clark Barrett <cbarrett@fb.com>"]
edition = "2019"
description = "A generic solver-agnostic API for interacting with SMT solvers based on the SMT-LIB standard."
homepage = "https://github.com/facebookincubator/Rust-SMT-LIB-API"
repository = "https://github.com/facebookincubator/Rust-SMT-LIB-API.git"
readme = "README.md"
keywords = ["smt", "satisfiability", "modulo", "theories", "z3"]
categories = ["api-bindings", "science"]
license = "MIT"
exclude = [".gitignore", ".travis.yml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1"
z3-sys = "0.4.0"
